; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-db/extr_rmsgpack_dom.c_dom_read_int.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-db/extr_rmsgpack_dom.c_dom_read_int.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dom_reader_state = type { i32 }
%struct.rmsgpack_dom_value = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 }

@RDT_INT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @dom_read_int to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dom_read_int(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.dom_reader_state*, align 8
  %6 = alloca %struct.rmsgpack_dom_value*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = bitcast i8* %7 to %struct.dom_reader_state*
  store %struct.dom_reader_state* %8, %struct.dom_reader_state** %5, align 8
  %9 = load %struct.dom_reader_state*, %struct.dom_reader_state** %5, align 8
  %10 = call i64 @dom_reader_state_pop(%struct.dom_reader_state* %9)
  %11 = inttoptr i64 %10 to %struct.rmsgpack_dom_value*
  store %struct.rmsgpack_dom_value* %11, %struct.rmsgpack_dom_value** %6, align 8
  %12 = load i32, i32* @RDT_INT, align 4
  %13 = load %struct.rmsgpack_dom_value*, %struct.rmsgpack_dom_value** %6, align 8
  %14 = getelementptr inbounds %struct.rmsgpack_dom_value, %struct.rmsgpack_dom_value* %13, i32 0, i32 1
  store i32 %12, i32* %14, align 4
  %15 = load i32, i32* %3, align 4
  %16 = load %struct.rmsgpack_dom_value*, %struct.rmsgpack_dom_value** %6, align 8
  %17 = getelementptr inbounds %struct.rmsgpack_dom_value, %struct.rmsgpack_dom_value* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  store i32 %15, i32* %18, align 4
  ret i32 0
}

declare dso_local i64 @dom_reader_state_pop(%struct.dom_reader_state*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
